--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -7,7 +7,7 @@
 }
 
 .skill-icon {
-  font-size: 3rem;
+  font-size: 2rem;
   border: 1px solid var(--primary-white);
   padding: 1rem;
   border-radius: var(--border-radius);
@@ -23,5 +23,9 @@
 @media screen and (min-width: 768px) {
   .skills-container {
     grid-template-columns: repeat(6, auto);
+  }
+
+  .skill-icon {
+    font-size: 3rem;
   }
 }
